# edukit_bot

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: _teleop.launch  controllers.launch  edukit_bot.launch
scripts/: controller_node  driver_node
snap/: snapcraft.yaml
src/edukit_bot/: CMakeLists.txt  package.xml
src/edukit_bot/launch/: _controllers.launch  edukit_bot.launch
src/edukit_bot/launch/includes/: controllers.launch.xml  teleop.launch.xml
src/edukit_bot/scripts/: controller_node  driver_node
urdf/: edukit_bot.urdf
