<?xml version="1.0"?>
<package>
  <name>edukit-bot</name>
  <version>0.1</version>
  <description>The edukit-bot package</description>

  <maintainer email="kyrofa@ubuntu.com">Kyle Fazzari</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rpi.gpio-pip</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rpi.gpio-pip</run_depend>
</package>
